Fix alignment with item block

--- a/app/src/blocks/item.scss
+++ b/app/src/blocks/item.scss
@@ -39,6 +39,7 @@ $name: item;
 			padding-top: 0;
 			padding-left: 15px;
 			flex: none;
+			justify-content: flex-start;
 		}
 	}
 
